Added form with white background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 <body>
   <div class="background-Image">
     <h1 class="center display-1">Welcome to the quiz!</h1>
+    <div class="d-flex justify-content-center">
+      <form class="background-Form">
+        <label for="questions">How many questions?</label>
+        <select name="questions">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+      </form>
+    </div>
   </div>
   <!--Scripts below this line-->
   <script type="text/javascript" src="main.js"></script>
