Removed background-Form class and made changes to the form.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
   <div class="background-Image">
     <h1 class="center display-1">Welcome to the quiz!</h1>
     <div class="d-flex justify-content-center">
-      <form class="background-Form">
-        <label for="questions">How many questions?</label>
+      <form>
         <select name="questions">
+          <option selected="selected">How many questions?</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
         </select>
       </form>
+    </div>
+    <div class="d-flex justify-content-center">
+      <button type="button" name="button" class="btn btn-success">Let's go!</button>
     </div>
   </div>
   <!--Scripts below this line-->
