--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="centerDiv">
       <div class="shapeForm">
         <form>
-          <select name="select_questions" class="selection">
-            <option selected="selected">How many questions?</option>
+          <select name="select_questions" class="selection" id="">
+            <option selected="selected" id="selectQuestion">How many questions?</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
           <div class="centerDiv">
-            <button type="button" class="btn btn-success btn_go">Let's go!</button>
+            <button type="button" class="btn btn-success btn_go" id="startQuiz">Let's go!</button>
           </div>
         </form>
       </div>
