btn_CreateQuiz now creates a new div at the bottom of the body

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </select>
       </form>
     </div>
-    <div class="d-flex justify-content-center">
-      <button type="button" name="button" class="btn btn-success">Let's go!</button>
+    <div class="d-flex justify-content-center" id="createQuiz">
+      <button type="button" name="button" class="btn btn-success" id="btn_CreateQuiz">Let's go!</button>
     </div>
   </div>
   <!--Scripts below this line-->
