Readded button and div ids "Let's go" button

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
-          <div class="centerDiv">
-            <button type="button" class="btn btn-success btn_go">Let's go!</button>
+          <div class="centerDiv" id="createQuiz">
+            <button type="button" class="btn btn-success btn_go" id="btn_CreateQuiz">Let's go!</button>
           </div>
         </form>
       </div>
