added div id, changed placeholder text and removes at click questionDiv.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="background-Image">
     <h1 class="center display-1">Welcome to the quiz!</h1>
     <div class="centerDiv" id="createQuiz">
-      <div class="shapeForm">
+      <div class="shapeForm" id="questionsDiv">
         <form>
           <select name="select_questions" class="selection">
             <option selected="selected">How many questions?</option>
