--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="centerDiv" id="createQuiz">
       <div class="shapeForm" id="questionsDiv">
         <form>
-          <select name="select_questions" class="selection">
-            <option selected="selected">How many questions?</option>
+          <select name="select_questions" class="selection" id="select_question">
+            <option value="0">How many questions?</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
