Updated properties in classes and added a username box.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="centerDiv" id="createQuiz">
       <div class="shapeForm" id="questionsDiv">
         <form>
+          <div class="centerDiv selection">
+            <input type="text" name="userName" id="userNameInput" placeholder="Enter your name here...">
+          </div>
           <select name="select_questions" class="selection" id="select_question">
             <option value="0">How many questions?</option>
             <option value="1">1</option>
