added div for h1&h2 tags, added function to print results, added css.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <div class="background-Image">
-    <h1 class="center display-1">Welcome to the quiz!</h1>
+    <div id="headers">
+      <h1 id="headTitle" class="center display-1">Welcome to the quiz!</h1>
+    </div>
     <div class="centerDiv" id="createQuiz">
       <div class="shapeForm" id="questionsDiv">
         <form>
