Disabled placeholder option.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="text" name="userName" id="userNameInput" placeholder="Enter your name here...">
           </div>
           <select name="select_questions" class="selection" id="select_question">
-            <option value="0">How many questions?</option>
+            <option value="0" disabled>How many questions?</option>
           </select>
           <div class="centerDiv">
             <button type="button" class="btn btn-success btn_go" id="btn_CreateQuiz">Let's go!</button>
