--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="stylesheet.css">
-  <!--Bootstrap script-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Quiz</title>
 </head>
@@ -18,24 +17,23 @@
     <div class="centerDiv" id="createQuiz">
       <div class="shapeForm" id="questionsDiv">
         <form>
-          <div class="centerDiv selection">
+          <div class="centerDiv margins">
             <input type="text" name="userName" id="userNameInput" placeholder="Enter your name here...">
           </div>
-          <select name="select_questions" class="selection" id="select_question">
-            <option value="0" disabled>How many questions?</option>
-          </select>
+          <div class="centerDiv margins">
+            <select name="select_questions" id="select_question">
+              <option value="0" disabled>How many questions?</option>
+            </select>
+          </div>
           <div class="centerDiv">
             <button type="button" class="btn btn-success btn_go" id="btn_CreateQuiz">Let's go!</button>
           </div>
         </form>
       </div>
     </div>
-
   </div>
-  <!--Scripts below this line-->
   <script type="text/javascript" src="readjson.js"></script>
   <script type="text/javascript" src="main.js"></script>
-  <!--Bootstrap scripts-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
