removed btn_go class, let's go button now uses margins css class.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               <option value="0" disabled>How many questions?</option>
             </select>
           </div>
-          <div class="centerDiv">
-            <button type="button" class="btn btn-success btn_go" id="btn_CreateQuiz">Let's go!</button>
+          <div class="centerDiv margins">
+            <button type="button" class="btn btn-success" id="btn_CreateQuiz">Let's go!</button>
           </div>
         </form>
       </div>
