Added more responsive classes to headers.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="background-Image">
     <div id="headers">
-      <h1 id="headTitle" class="center display-1">Welcome to the quiz!</h1>
+      <h1 id="headTitle" class="display-3">Welcome to the quiz!</h1>
     </div>
     <div class="centerDiv" id="createQuiz">
       <div class="shapeForm" id="questionsDiv">
